--- a/latex/justin_napolitano_resume.tex
+++ b/latex/justin_napolitano_resume.tex
@@ -93,8 +93,8 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{https://cv.jnapolitano.io/}{\Large Justin Napolitano}} & Email : \href{mailto:justin@jnapolitano,io}{justin@jnapolitano.io}\\
-  \href{https://cv.jnapolitano.io}{https:cv.jnapolitano.io} & Mobile : +1-832-299-0372 \\
+  \textbf{\href{https://docs.jnapolitano.io/}{\Large Justin Napolitano}} & Email : \href{mailto:justin@jnapolitano,io}{justin@jnapolitano.io}\\
+  \href{https://jnapolitano.io}{https:jnapolitano.io} & Mobile : +1-832-299-0372 \\
 \end{tabular*}
 
 
@@ -111,14 +111,14 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {\href{https://cv.jnapolitano.io/parts/data/web-scraping/index.html}{BTJN, LLC}}{Houston, TX}
+      {\href{https://docs.jnapolitano.io/parts/data/web-scraping/index.html}{BTJN, LLC}}{Houston, TX}
       {Software Developer}{May 2021 - Present}
       \resumeItemListStart
-        \resumeItem{\href{https://cv.jnapolitano.io/parts/data/web-scraping/index.html}{Sales Lead Generation Application}}
-          {\href{https://cv.jnapolitano.io/parts/data/web-scraping/index.html}{Produced 10,000 sales leads weekly on average.  Mined web for data with Python and Bs4.} \href{https://cv.jnapolitano.io/parts/python-development/google/index.html}{Integrated data with custom Google API Class.}  Identified valuable leads with \href{https://cv.jnapolitano.io/parts/python-development/neo4j/index.html}{Neo4j} and \href{https://cv.jnapolitano.io/parts/python-development/janus-graph/index.html}{JanusGraph} backends.}
-        \resumeItem{\href{https://cv.jnapolitano.io/parts/data/data-integration/index.html}{CRM Application and Integration}}
-          {Deployed a custom CRM solution with Microsoft SQL Server in the Azure cloud.  \href{https://cv.jnapolitano.io/parts/data/data-integration/index.html}{Transformed data locally with Python to maximize value for clients.}}
-        \resumeItem{\href{https://cv.jnapolitano.io/parts/analysis/business-analysis/index.html}{Business Reporting and Sales Predictions}}
+        \resumeItem{\href{https://docs.jnapolitano.io/parts/data/web-scraping/index.html}{Sales Lead Generation Application}}
+          {\href{https://docs.jnapolitano.io/parts/data/web-scraping/index.html}{Produced 10,000 sales leads weekly on average.  Mined web for data with Python and Bs4.} \href{https://docs.jnapolitano.io/parts/python-development/google/index.html}{Integrated data with custom Google API Class.}  Identified valuable leads with \href{https://docs.jnapolitano.io/parts/python-development/neo4j/index.html}{Neo4j} and \href{https://docs.jnapolitano.io/parts/python-development/janus-graph/index.html}{JanusGraph} backends.}
+        \resumeItem{\href{https://docs.jnapolitano.io/parts/data/data-integration/index.html}{CRM Application and Integration}}
+          {Deployed a custom CRM solution with Microsoft SQL Server in the Azure cloud.  \href{https://docs.jnapolitano.io/parts/data/data-integration/index.html}{Transformed data locally with Python to maximize value for clients.}}
+        \resumeItem{\href{https://docs.jnapolitano.io/parts/analysis/business-analysis/index.html}{Business Reporting and Sales Predictions}}
           {Modeled retail sales with the SARINA, Holt-Winter, and Exponential Smoothing models in Python and Jupyter Notebooks.  Identified model of greatest predictive power with the Mean Absolute Percentage Error formula.}
       \resumeItemListEnd
       
@@ -133,21 +133,21 @@
 %-------------------------------------------
 
     \resumeSubheading
-      {\href{https://cv.jnapolitano.io/parts/resume/work-history/docs/ucf.html}{University of Central Florida}}{Orlando, FL}
+      {\href{https://docs.jnapolitano.io/parts/resume/work-history/docs/ucf.html}{University of Central Florida}}{Orlando, FL}
       {Research Lead}{Jan 2017 - Aug 2019}
       \resumeItemListStart
-        \resumeItem{\href{https://cv.jnapolitano.io/parts/analysis/political-analysis/terrorism-conflict/project-turkish-kurdish/pdf.htm}{Research Design}}
-          {Ensured rigor of data collection methodology by exceeding industry standards.  Ensured rigor of data collection methodology by exceeding industry standards.}
-        \resumeItem{\href{https://cv.jnapolitano.io/parts/analysis/political-analysis/terrorism-conflict/project-turkish-kurdish/database_schema.html}{Database Design}}
-          {Defined a third normal database to maintain logical consistency.  Refined schema to facilitate easy porting to Person, Object, Location and Events (POLE) Schema.}
-        \resumeItem{\href{https://cv.jnapolitano.io/parts/data/data-integration/index.html}{Data Integration}}
+        \resumeItem{\href{https://docs.jnapolitano.io/parts/analysis/political-analysis/terrorism-conflict/project-turkish-kurdish/pdf.htm}{Research Design}}
+          {Ensured rigor of data collection methodology by meeting industry best practices.}
+        \resumeItem{\href{https://docs.jnapolitano.io/parts/analysis/political-analysis/terrorism-conflict/project-turkish-kurdish/database_schema.html}{Database Design}}
+          {Defined a third normal database to maintain logical consistency.  Refined schema to facilitate porting to Person, Object, Location and Events (POLE) schema.}
+        \resumeItem{\href{https://docs.jnapolitano.io/parts/data/data-integration/index.html}{Data Integration}}
           {Standardized integration procedures to verify integrity of files generated by research assistants. Transformed data from Excel and CSV sources into JSON format to index into a noSQL database.}
-        \resumeItem{\href{https://cv.jnapolitano.io/parts/analysis/political-analysis/terrorism-conflict/project-turkish-kurdish/analysis.html}{Data Analysis}}
-          {Analyzed conflict data with Pandas and Excel.  Visualized data trends with MatPlotLib.  Prepared presentation for peer review at the Peace Science Conference at the Hague in Switzerland by Dr. Demet Mousseau.}
-        \resumeItem{\href{https://cv.jnapolitano.io/parts/analysis/political-analysis/terrorism-conflict/project-turkish-kurdish/pdf.html}{Project Management}}
-          {Developed manuals to train inexperienced research assistants to query primary sources and code data points.  Led team to achieve project goals prior to strict deadlines defined in our research grant.}
-        \resumeItem{\href{https://cv.jnapolitano.io/parts/analysis/political-analysis/human-rights-law/index.html}{Human Rights Abuse Framework}}
-          {Aggregated corpus of international human rights law into a searchable frame work.}
+        \resumeItem{\href{https://docs.jnapolitano.io/parts/analysis/political-analysis/terrorism-conflict/project-turkish-kurdish/analysis.html}{Data Analysis}}
+          {Analyzed conflict data with Pandas and Excel.  Visualized data trends with MatPlotLib.  Prepared presentation for peer review at the Peace Science Conference at the Hague, Switzerland.}
+        \resumeItem{\href{https://docs.jnapolitano.io/parts/analysis/political-analysis/terrorism-conflict/project-turkish-kurdish/pdf.html}{Project Management}}
+          {Developed manuals to train inexperienced research assistants to query primary sources and code data points.  Led team to achieve project goals prior to deadlines defined in our research grant.}
+        \resumeItem{\href{https://docs.jnapolitano.io/parts/analysis/political-analysis/human-rights-law/index.html}{Human Rights Abuse Frame Work}}
+          {Aggregated corpus of international human rights law to cross reference with abuse events.}
     \resumeItemListEnd
 
     \resumeSubheading
@@ -157,9 +157,9 @@
         \resumeItem{Data Integration}
           {Aggregated data points generated by student research assistants into database with Python.}
         \resumeItem{Sentiment Analysis}
-          {Analyzed the sentiment of sentences to determine the emotional state of the speaker.}
+          {Analyzed sentiment of sentences to determine speaker's emotional state.}
         \resumeItem{Automated Sentiment Analysis}
-          {Compared user scored sentences to sentiment scored by Python scripts to identify human errors.}
+          {Compared user scored sentences to programmatic scoring to identify errors.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -167,18 +167,20 @@
 %-----------PROJECTS-----------------
 \section{Projects}
   \resumeSubHeadingListStart
-    \resumeSubItem{\href{https://cv.jnapolitano.io/parts/ml-ai/tensorflow/project-supcourt-tensorflow/index.html}{Supreme Court Voting Behavior Prediction in TensorFlow}}
-      {Predicting voting behavior of Supreme Court justices with TensorFlow.}
-    \resumeSubItem{\href{https://cv.jnapolitano.io/parts/ml-ai/tensorflow/project-gender-recognition/index.html}{Gender Recognition in TensorFlow}}
-      {Identifying gender with TensorFlow.}
-    \resumeSubItem{\href{https://cv.jnapolitano.io/parts/analysis/political-analysis/sup-court/project-sup-court-meta-data-graph/index.html}{Supreme Court Metadata Graph}}
-      {Graph of the metadata of every United States Supreme Court Case.}  
-    \resumeSubItem{\href{https://cv.jnapolitano.io/parts/data/graph-database/index.html}{Real Estate Professional Graph}}
-      {Graph of real estate professionals in the United States.}
-    \resumeSubItem{\href{https://cv.jnapolitano.io/parts/python-development/google/index.html}{Google Drive API}}
-      {Google API application that streamlines data pipeline transformations for teams using the Google Productivity Suite.}
-    \resumeSubItem{\href{https://cv.jnapolitano.io/parts/reference/build-this-site/index.html}{Sphinx CV Template}}
-      {Sphinx project to create a static cv or resume website with reStructuredText and MarkDown.}
+    \resumeSubItem{\href{https://docs.jnapolitano.io/parts/analysis/business-analysis/index.html}{Business Analysis}}
+      {Forecasting and analysis projects.}
+    \resumeSubItem{\href{https://docs.jnapolitano.io/parts/analysis/political-analysis/index.html}{Political Analysis}}
+      {Conflict, behavioral, and political analysis.}
+    \resumeSubItem{\href{https://docs.jnapolitano.io/parts/ml-ai/index.htmll}{Machine Learning}}
+      {Machine learning for political analysis.}
+    \resumeSubItem{\href{https://docs.jnapolitano.io/parts/data/web-scraping/index.html}{Web Scraping}}
+      {Web scraping projects to procure data.}
+    \resumeSubItem{\href{https://docs.jnapolitano.io/parts/data/data-integration/index.html}{Data Integration}}
+      {Data Integration and transformation scripts.}
+    \resumeSubItem{\href{https://docs.jnapolitano.io/parts/python-development/google/index.html}{Google Drive API}}
+      {Google API application to transform json data to Google Sheets.}
+    \resumeSubItem{\href{https://journal.jnapolitano.io/parts/tutorials/sphinx/docs/build-this-site.html}{Sphinx Documentation Template}}
+      {Tutorials and templates to create Sphinx and Jupyter Book publications}
   \resumeSubHeadingListEnd
 
 
@@ -187,10 +189,12 @@
   \resumeSubHeadingListStart
     \resumeSubItem{Computer Languages}
       {Bash, C, LaTeX, Python, SAS, SPSS, SQL.}
-     \resumeSubItem{Technologies}
-       {Azure, Docker, Git, JanusGraph, Jupyter Notebook, Neo4j, Pandas, SciPY, Sphinx, TensorFlow.}
-       \resumeSubItem{Modelling and Forecasting}
-        {Sales Forecasting}
+    \resumeSubItem{Technologies}
+      {Azure, Docker, Git, JanusGraph, Jupyter Notebook, Neo4j, Pandas, SciPY, Sphinx, TensorFlow.}
+    \resumeSubItem{Data Modelling and Analysis}
+      {\href{https://docs.jnapolitano.io/parts/analysis/business-analysis/project-retail-sales-forecasting/code-base/SalesForcasting.html}{Sales Forecasting,} {\href{https://docs.jnapolitano.io/parts/analysis/political-analysis/index.html}{Political Analysis,}} {\href{https://docs.jnapolitano.io/parts/analysis/business-analysis/index.html}{Business Analysis.}}}
+    \resumeSubItem{Spoken Languages}
+      {Cantonese, French, Spanish, Sranan Tongo.}
 %     \item{
 %      \textbf{Languages}{: Bash, C, LaTeX, Python, SAS, SQL.}
 %      \hfill
